<resources>
    <string name="app_name">Fit Duo</string>

    <string name="facebook_app_id">2288673187859593</string>
    <string name="fb_login_protocol_scheme">fb2288673187859593</string>
    <string name="log_in">Log in</string>
    <string name="login_title">Log in to your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="display_name">Display Name</string>
    <string name="log_out">Log Out</string>
    <string name="account_settings">Account Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
